--- a/app/src/main/res/layout/activity_animal_details.xml
+++ b/app/src/main/res/layout/activity_animal_details.xml
@@ -237,7 +237,7 @@
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Desaparceu a: "
+                android:text="Desapareceu a: "
                 android:textStyle="bold" />
 
             <TextView
@@ -341,7 +341,26 @@
                 android:text="" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/llMyAnimalsButtons">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnLeft"
+                android:onClick="onClick_btnLeft"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnRight"
+                android:onClick="onClick_btnRight"/>
+
+        </LinearLayout>
+
     </LinearLayout>
-
-
 </LinearLayout>
